--- a/annuals.html
+++ b/annuals.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos anuales</title>
+    <title>Metricars - Datos anuales</title>
 
     <link href="../styles/styles.css" rel="stylesheet">
     <script src="./annuals.js" type="module" defer></script>
