--- a/propulsion.html
+++ b/propulsion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ránking de matriculaciones</title>
+    <title>Metricars - Tipos de motor</title>
 
     <link href="../styles/styles.css" rel="stylesheet">
     <script src="propulsion.js" type="module" defer></script>
