--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
                         </li>
                     </ul>
                     <!-- Contenedor para posicionar correctamente el icono de filtros -->
-                    <div id="btnFilter" class="btnFilter navbar-nav d-flex ms-auto d-none" onclick="toggleFilterSection()" style="cursor: pointer;">
+
+                    <div id="sectionFilter" class="navbar-nav d-flex ms-auto d-none align-items-center">
+                        <select id="datePeriod" class="periodFilter">
+                            <option value="1">Último mes</option>
+                            <option value="2">Últimos 3 meses</option>
+                            <option value="3">Año actual</option>
+                            <option value="4">Últimos 3 años</option>
+                        </select>
+
+                        <div class="separator"></div>
+
+                        <div id="btnFilter" class="btnFilter" onclick="toggleFilterSection()" style="cursor: pointer;">
                         <div class="bi bi-funnel"> Filtrar</div>
                     </div>
                 </div>
@@ -70,19 +81,7 @@
 
     <!-- Contenedor del filtro (inicialmente oculto) -->
     <div id="filterSection" class="container-fluid p-3 filterSection">
-        <div class="row g-3">
-            <!-- Fecha Desde -->
-            <div class="col-6 col-md-3 col-xl-2 mb-3">
-                <label for="dateFrom" class="form-label">Desde</label>
-                <input type="month" class="datefilter form-control" id="dateFrom">
-            </div>
-    
-            <!-- Fecha Hasta -->
-            <div class="col-6 col-md-3 col-xl-2 mb-3">
-                <label for="dateTo" class="form-label">Hasta</label>
-                <input type="month" class="datefilter form-control" id="dateTo">
-            </div>
-        </div>
+        
         <div class="row g-3">
             <!-- Marcas -->
             <div class="col-6 col-md-4 col-xl-2">
