--- a/ranking.html
+++ b/ranking.html
@@ -42,6 +42,23 @@
                 </div>
             </div>
 
+            <div class="col-12 col-lg-6 text-center">
+                <div class="tarjet">
+                    <h6>Matriculaciones acumuladas por Marcas</h6>
+                    <div class="chart-container-medium">
+                        <canvas id="topBrandsAcc"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 text-center">
+                <div class="tarjet">
+                    <h6>Matriculaciones acumuladas por Modelos</h6>
+                    <div class="chart-container-medium">
+                        <canvas id="topModelsAcc"></canvas>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-12">
                 <div class="grid">
                     <div id="topResults"></div>
