--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,8 @@
                 <div class="tarjet">
                     <h6>Top matriculaciones por Marcas</h6>
                     <div class="chart-container-large">
-                        <canvas id="topBrands"></canvas>
+                        <img id="topBrandsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
+                        <canvas id="topBrands" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -37,7 +38,8 @@
                 <div class="tarjet">
                     <h6>Top matriculaciones por Modelos</h6>
                     <div class="chart-container-large">
-                        <canvas id="topModels"></canvas>
+                        <img id="topModelsLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
+                        <canvas id="topModels" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -46,7 +48,8 @@
                 <div class="tarjet">
                     <h6>Matriculaciones acumuladas por Marcas</h6>
                     <div class="chart-container-medium">
-                        <canvas id="topBrandsAcc"></canvas>
+                        <img id="topBrandsAccLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
+                        <canvas id="topBrandsAcc" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
@@ -54,7 +57,8 @@
                 <div class="tarjet">
                     <h6>Matriculaciones acumuladas por Modelos</h6>
                     <div class="chart-container-medium">
-                        <canvas id="topModelsAcc"></canvas>
+                        <img id="topModelsAccLoading" src="images/logo_gray.svg" alt="Logo Metricars" width="100">
+                        <canvas id="topModelsAcc" style="display: none;"></canvas>
                     </div>
                 </div>
             </div>
